# cli-dummy

./: .gitignore  Cargo.toml  README.md  nfpm.yaml  release.template.toml  release.toml
.github/workflows/: Formula.template.rb  PKGBUILD.template  Registry.template.md  Scoop.template.json  installer.template.ps1  installer.template.sh  main.template.wxs  release-plan.nu  release.nu  release.yml
.github/workflows/templates/: Dockerfile.alpine.template  Dockerfile.debian-slim.template  Nuspec.template.xml  PKGBUILD.template  Registry.template.md  build.template.wixproj  installer.template.sh  main.template.wxl  main.template.wxs  nfpm.template.yaml
docs/: REGISTRY.md
src/: main.rs
wix/: build.wixproj  main.wxs
