[package]
name = "cli-dummy"
version = "0.4.1"
authors = ["CodeTease"]
repository = "https://github.com/CodeTease/cli-dummy"
homepage = "https://github.com/CodeTease/cli-dummy"
license = "MIT"
description = "A dummy CLI tool"
edition = "2024"

[dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
