[package]
name = "cli-dummy"
version = "0.4.5"
authors = ["CodeTease"]
repository = "https://github.com/CodeTease/cli-dummy"
homepage = "https://github.com/CodeTease/cli-dummy"
license = "MIT"
description = "A dummy CLI tool that prints literally anything (that I can think of)."
edition = "2024"
keywords = ["cli", "dummy", "test"]

[dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
